# starter-rust-workspace

./: .gitignore  .taplo.toml  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: main.yml  release.yml
crates/bins/demo-bin/: Cargo.toml
crates/bins/demo-bin/src/: main.rs
crates/dev/xtask/: Cargo.toml
crates/dev/xtask/src/: main.rs  tools.rs
crates/libs/demo-lib/: Cargo.toml
crates/libs/demo-lib/src/: lib.rs
